--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+/* SITEHEADER */
 .site-header {
   background-color: #fff;
 }
 
+
+/* SITENAV */
 .sitenav-list {
   list-style: none;
 }
@@ -16,6 +19,8 @@
   color: #000;
 }
 
+
+/* MAINLINK */
 .main-link {
   font-size: 13px;
   line-height: 15px;
@@ -24,8 +29,8 @@
   text-decoration: none;
 }
 
-/* SECTION 1 */
 
+/* HERO */
 .hero {
   width: 1440px;
   color: #fff;
@@ -73,8 +78,9 @@
   line-height: 1.5;
   letter-spacing: 0.5px;
 }
-/* SECTION 2 */
 
+
+/* FEATURES */
 .features-heading {
   width: 440px;
   font-size: 72px;
@@ -82,6 +88,8 @@
   letter-spacing: 0.5px;
 }
 
+
+/* FEATURE */
 .feature {
   width: 340px;
 }
@@ -104,6 +112,8 @@
   letter-spacing: 0.5px;
 }
 
+
+/* PROMO */
 .promo {
   background-color: #252420;
   color: #fff;
@@ -130,6 +140,8 @@
   object-fit: cover;
 }
 
+
+/* SITE-FOOTER */
 .site-footer {
   background-color: #f8f8f8;
 }
