Add flex, justify-contend and align-items styles

--- a/style.css
+++ b/style.css
@@ -8,12 +8,20 @@ body {
 
 /* SITEHEADER */
 .site-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #fff;
 }
 
+.site-header-actions {
+  display: flex;
+  align-items: center;
+}
 
 /* SITENAV */
 .sitenav-list {
+  display: flex;
   list-style: none;
 }
 
@@ -40,7 +48,9 @@ body {
 
 /* HERO */
 .hero {
-  width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #fff;
   background-color: #252420;
 }
@@ -90,6 +100,12 @@ body {
   font-family: "Roboto Condensed", "Roboto", "Arial", Sans-serif;
 }
 
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
 
 /* FEATURE */
 .feature {
@@ -112,6 +128,9 @@ body {
 
 /* PROMO */
 .promo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #252420;
   color: #fff;
 }
@@ -143,13 +162,28 @@ body {
   background-color: #f8f8f8;
 }
 
+.site-footer-top {
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
 .site-footer ul {
   list-style: none;
+}
+
+.site-footer-socials {
+  display: flex;
+  align-items: center;
 }
 
 .site-footer-divider {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
+}
+
+.site-footer-bottom {
+  display: flex;
 }
 
 .site-footer-links {
