--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,18 @@ body {
   background-color: #fff;
 }
 
+.logo-link {
+  transition: opacity 0.4s ease;
+}
+
+.logo-link:hover {
+  opacity: 0.8;
+}
+
+.logo-link:active {
+  opacity: 0.6;
+}
+
 .site-header-actions {
   display: flex;
   align-items: center;
@@ -33,6 +45,17 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
+  transition: color 0.4s ease,
+  opacity 0.4s ease;
+  font-family: "Roboto Condensed", "Roboto", "Arial", Sans-serif;
+}
+
+.sitenav-link:hover {
+  color: #FF7500;
+}
+
+.sitenav-link:active {
+  opacity: 0.6;
 }
 
 
@@ -43,6 +66,15 @@ body {
   background-color: #FF7500;
   color: #fff;
   text-decoration: none;
+  transition: opacity 0.4s ease;
+}
+
+.main-link:hover {
+  opacity: 0.8;
+}
+
+.main-link:active {
+  opacity: 0.6;
 }
 
 
@@ -177,6 +209,19 @@ justify-content: space-between;
   align-items: center;
 }
 
+.site-footer-socials a {
+  color: #252420;
+  transition: color 0.4s ease;
+}
+
+.site-footer-socials a:hover {
+  color: #FF7500;
+}
+
+.site-footer-socials a:active {
+  opacity: 0.6;
+}
+
 .site-footer-divider {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
@@ -194,4 +239,15 @@ justify-content: space-between;
 .site-footer-links a {
   color: #252420;
   text-decoration: none;
+  transition: color 0.4s ease,
+  opacity 0.4s ease;
+}
+
+
+.site-footer-links a:hover {
+  color: #FF7500;
+}
+
+.site-footer-links a:focus {
+  opacity: 0.6;
 }
