--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
   letter-spacing: 0.5px;
 }
 
+*:focus {
+  outline: 2px dotted #FF7500;
+  outline-offset: 3px;
+}
+
 
 /* SITEHEADER */
 .site-header {
