--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,7 @@ justify-content: space-between;
 }
 
 .site-footer-socials a {
+  display: block;
   color: #252420;
   transition: color 0.4s ease;
 }
@@ -303,6 +304,10 @@ justify-content: space-between;
 
 .site-footer-socials a:active {
   opacity: 0.6;
+}
+
+.site-footer-socials svg {
+  display: block;
 }
 
 .site-footer-divider {
