--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ body {
 }
 
 .hero-container {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -171,6 +172,9 @@ body {
 }
 
 .hero-img {
+  position: absolute;
+  top: -40px;
+  right: 0;
   width: 510px;
   height: 510px;
   border-radius: 8px;
@@ -269,6 +273,7 @@ body {
 }
 
 .promo-inner {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -309,6 +314,9 @@ body {
 }
 
 .promo-img {
+  position: absolute;
+  bottom: 64px;
+  right: 64px;
   width: 440px;
   height: 440px;
   border-radius: 12px;
