--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,7 @@ justify-content: space-between;
 
 .site-footer-bottom {
   display: flex;
+  font-weight: bold;
 }
 
 .site-footer-links {
@@ -421,4 +422,77 @@ justify-content: space-between;
 
 .site-footer-links a:active {
   opacity: 0.6;
+}
+
+@media only screen and (max-width: 1100px) {
+  .site-footer-links {
+    width: 20.36%;
+    margin-right: 6.18%;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .site-footer-bottom {
+    flex-wrap: wrap;
+  }
+
+  .site-footer-links {
+    width: 30%;
+    margin-right: 5%;
+    margin-bottom: 20px;
+  }
+
+  .site-footer-links:last-child {
+    margin-right: 5%;
+  }
+
+  .site-footer-links:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .site-footer-links {
+    width: 46%;
+    margin-right: 8%;
+  }
+
+  .site-footer-links:last-child {
+    margin-right: 8%;
+  }
+
+  .site-footer-links:nth-child(3n) {
+    margin-right: 8%;
+  }
+
+  .site-footer-links:nth-child(even) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .site-footer {
+    padding-top: 36px;
+    padding-bottom: 36px;
+  }
+
+  .site-footer-top {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .site-footer-links {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .site-footer-links:last-child {
+    margin-bottom: 0;
+  }
+
+  .site-footer-links:nth-child(3n) {
+    margin-right: 0;
+  }
+
 }
