--- a/css/style.css
+++ b/css/style.css
@@ -425,13 +425,33 @@ justify-content: space-between;
 }
 
 @media only screen and (max-width: 1100px) {
+  .feature {
+    width: 30%;
+    margin-right: 5%;
+  }
   .site-footer-links {
     width: 20.36%;
     margin-right: 6.18%;
   }
 }
 
+@media only screen and (max-width: 1000px) {
+  .features {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+}
+
 @media only screen and (max-width: 760px) {
+  .features {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+
+  .features-heading {
+    margin-bottom: 54px;
+    font-size: 54px;
+  }
   .site-footer-bottom {
     flex-wrap: wrap;
   }
@@ -448,6 +468,26 @@ justify-content: space-between;
 
   .site-footer-links:nth-child(3n) {
     margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .features-list {
+    flex-wrap: wrap;
+  }
+
+  .feature {
+    width: 47%;
+    margin-right: 6%;
+    margin-bottom: 36px;
+  }
+
+  .feature:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .feature-icon-wrapper {
+    margin-bottom: 16px;
   }
 }
 
@@ -471,6 +511,26 @@ justify-content: space-between;
 }
 
 @media only screen and (max-width: 530px) {
+  .orange-line {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+
+  .features-heading {
+    width: 100%;
+    text-align: center;
+  }
+
+  .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin-right: 0;
+  }
+
   .site-footer {
     padding-top: 36px;
     padding-bottom: 36px;
@@ -482,6 +542,15 @@ justify-content: space-between;
 }
 
 @media only screen and (max-width: 400px) {
+  .features {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+
+  .features-heading {
+    font-size: 36px;
+  }
+
   .site-footer-links {
     width: 100%;
     margin-right: 0;
