--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ body {
   height: 96px;
 }
 
-.hero img{
+.hero-img{
   width: 510px;
   height: 510px;
   box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
@@ -424,6 +424,13 @@ justify-content: space-between;
   opacity: 0.6;
 }
 
+@media only screen and (max-width: 1200px) {
+  .hero-img {
+    position: static;
+    margin-right: 30px;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   .feature {
     width: 30%;
@@ -436,13 +443,51 @@ justify-content: space-between;
 }
 
 @media only screen and (max-width: 1000px) {
+  .hero-content {
+    flex-grow: 1;
+    margin-right: 30px;
+  }
+
+  .hero-heading {
+    font-size: 36px;
+  }
+  .hero-img {
+    width: 350px;
+    height: 350px;
+  }
+
   .features {
     padding-top: 150px;
     padding-bottom: 150px;
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .hero-img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
 @media only screen and (max-width: 760px) {
+  .hero-container {
+    flex-direction: column-reverse;
+  }
+
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .hero-img {
+    margin-right: 0;
+    margin-bottom: 54px;
+  }
+
   .features {
     padding-top: 90px;
     padding-bottom: 90px;
@@ -542,6 +587,12 @@ justify-content: space-between;
 }
 
 @media only screen and (max-width: 400px) {
+  .hero-img {
+    box-shadow: none;
+    max-width: 100%;
+    height: auto;
+  }
+
   .features {
     padding-top: 70px;
     padding-bottom: 70px;
