--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,15 @@ justify-content: space-between;
     width: 20.36%;
     margin-right: 6.18%;
   }
+
+  .promo-content {
+    flex-grow: 1;
+    margin-right: 30px;
+  }
+
+  .promo-img {
+    position: static;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -451,6 +460,7 @@ justify-content: space-between;
   .hero-heading {
     font-size: 36px;
   }
+
   .hero-img {
     width: 350px;
     height: 350px;
@@ -460,12 +470,45 @@ justify-content: space-between;
     padding-top: 150px;
     padding-bottom: 150px;
   }
+
+  .promo-inner {
+    padding: 34px;
+  }
+
+  .promo-heading {
+    font-size: 36px;
+  }
+
+  .promo-img {
+    width: 350px;
+    height: 350px;
+  }
 }
 
 @media only screen and (max-width: 800px) {
   .hero-img {
     width: 300px;
     height: 300px;
+  }
+
+  .promo-inner {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 25px;
+  }
+
+  .promo-content {
+    margin-right: 0;
+  }
+
+  .promo-heading {
+    font-size: 32px;
+  }
+
+  .promo-img {
+    margin-bottom: 30px;
+    max-width: 100%;
+    height: auto;
   }
 }
 
@@ -553,6 +596,10 @@ justify-content: space-between;
   .site-footer-links:nth-child(even) {
     margin-right: 0;
   }
+
+  .promo-content {
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 530px) {
@@ -576,6 +623,11 @@ justify-content: space-between;
     margin-right: 0;
   }
 
+  .promo {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
   .site-footer {
     padding-top: 36px;
     padding-bottom: 36px;
@@ -583,6 +635,10 @@ justify-content: space-between;
 
   .site-footer-top {
     flex-direction: column;
+  }
+
+  .promo-content {
+    width: 100%;
   }
 }
 
@@ -600,6 +656,20 @@ justify-content: space-between;
 
   .features-heading {
     font-size: 36px;
+  }
+
+  .promo {
+    padding-top: 36px;
+    padding-bottom: 36px;
+  }
+
+  .promo-heading {
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .promo-img {
+    margin-bottom: 14px;
   }
 
   .site-footer-links {
