--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,29 @@ body {
 }
 
 
+/* MENU-ICON */
+.menu-icon {
+  width: 25px;
+  height: 25px;
+  color: var(--accent-color);
+}
+
+
+/* HEADER-MENU-BUTTON */
+.header-menu-toggle-button {
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  display: none;
+}
+
+/* IF MANY-CHILD IN THE NAVLIST */
+.many-child-item {
+  height: calc(100vh - 97px);
+  overflow: auto;
+}
+
+
 /* SITEHEADER */
 .site-header {
   background-color: #fff;
@@ -61,6 +84,7 @@ body {
 
 .logo-link {
   transition: opacity 0.4s ease;
+  margin-right: 20px;
 }
 
 .logo-link:hover {
@@ -73,6 +97,8 @@ body {
 
 .logo-link img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .site-header-actions {
@@ -132,6 +158,7 @@ body {
   color: #fff;
   text-decoration: none;
   transition: opacity 0.4s ease;
+  text-align: center;
 }
 
 .main-link:hover {
@@ -482,6 +509,63 @@ justify-content: space-between;
   .promo-img {
     width: 350px;
     height: 350px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .site-header {
+    position: relative;
+    z-index: 1;
+  }
+
+  .site-header-open {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .header-menu-toggle-button {
+    display: block;
+  }
+
+  .site-header-actions {
+    display: none;
+  }
+
+  .site-header-open .site-header-actions {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    padding: 20px;
+    display: block;
+    background-color: #fff;
+  }
+
+  .sitenav-list {
+    flex-direction: column;
+    margin-right: 0;
+  }
+
+  .sitenav-item {
+    padding: 10px;
+    box-shadow: 0 0 0 0.3px;
+    border-radius: 4px;
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 12px;
+  }
+
+  .sitenav-link {
+    width: 100%;
+    display: block;
+  }
+
+  .main-link {
+    width: 100%;
   }
 }
 
